2007-08-20  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_polygon,
	gp_cairo_end_polygon): Introduce a small piece of code, unused, but
	illustrative of the way the "saturate" operator is used to draw pm3d
	polygons without seams.
	

2007-08-18  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/save.c (save_range):  The output of "show <foo>range" lists the
	current value in a comment.  However, up until now the value listed was
	not really the current value.  Fix this.
	Bug #1731160

2007-08-17  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Remove extraneous {} from entry for 'set timestamp'.
	The offset must not begin with a leading comma.

2007-08-12  Ethan Merritt  <merritt@u.washington.edu>

	* src/color.c (cbtick_callback)
	src/graph3d.c (xtick_callback ytick_callback ztick_callback)
	src/graphics.c (xtick2d_callback ytick2d_callback):
	The callback routines were testing for TC_DEFAULT in the wrong field
	(colorspec.lt instead of colorspec.type).
	Bug #1771240

	* demo/electron.dem:  Remove the "offset command", which is buggy, and
	use a consistent x axis.  Still need to fix the bug in offset, however.
	Bug #1744139

2007-08-11  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (box_range_fiddline):  Add a check to prevent auto-scaled
	boxes from being cut off by a half-box width at each end of the range.
	Bug #1638190

2007-08-06  Ethan Merritt  <merritt@u.washington.edu>

	* src/wxterminal/gp_cairo.c (gp_cairo_stroke): Make the dots in lt 0
	look more like dots.

	* term/cairo.trm src/wxterminal/gp_cairo.c src/wxterminal/gp_cairo.h:
	Add dashlength option to cairopdf terminal.

2007-08-06  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/x11.trm (X11_text): Fix conditionally missing {.

2007-08-04  Matthias Habl  <mhabl@users.sourceforge.net>

	* configure.in: Allow to configure from inside an emacs script.
	Bug #1741156

2007-08-04  Ethan Merritt  <merritt@u.washington.edu>
